Fix KCT tests + upgrade it